--- a/packages/node-opcua-schemas/package.json
+++ b/packages/node-opcua-schemas/package.json
@@ -27,6 +27,9 @@
         "node-opcua-packet-analyzer": "2.155.0",
         "node-opcua-utils": "2.153.0"
     },
+    "devPeerDependencies": {
+        "node-opcua": "2.156.0"
+    },
     "author": "Etienne Rossignon",
     "license": "MIT",
     "repository": {
