--- a/packages/node-opcua-server/package.json
+++ b/packages/node-opcua-server/package.json
@@ -13,6 +13,8 @@
     "types": "./dist/index.d.ts",
     "dependencies": {
         "@ster5/global-mutex": "^2.0.0",
+        "@types/async": "3.2.24",
+        "@types/lodash": "4.17.20",
         "async": "^3.2.6",
         "chalk": "4.1.2",
         "dequeue": "^1.0.5",
@@ -24,7 +26,6 @@
         "node-opcua-binary-stream": "2.153.0",
         "node-opcua-certificate-manager": "2.154.0",
         "node-opcua-client": "2.156.0",
-        "node-opcua-client-dynamic-extension-object": "2.156.0",
         "node-opcua-common": "2.155.0",
         "node-opcua-constants": "2.139.0",
         "node-opcua-crypto": "4.16.0",
@@ -39,6 +40,7 @@
         "node-opcua-nodesets": "2.155.0",
         "node-opcua-numeric-range": "2.155.0",
         "node-opcua-object-registry": "2.153.0",
+        "node-opcua-pki": "5.5.0",
         "node-opcua-secure-channel": "2.155.0",
         "node-opcua-service-browse": "2.155.0",
         "node-opcua-service-call": "2.155.0",
