--- a/packages/node-opcua-certificate-manager/package.json
+++ b/packages/node-opcua-certificate-manager/package.json
@@ -12,7 +12,6 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "dependencies": {
-        "@types/mkdirp": "1.0.2",
         "env-paths": "2.2.1",
         "mkdirp": "1.0.4",
         "node-opcua-assert": "2.139.0",
@@ -24,7 +23,8 @@
         "thenify-ex": "4.4.0"
     },
     "devDependencies": {
-        "node-opcua-leak-detector": "2.154.0"
+        "node-opcua-leak-detector": "2.154.0",
+        "rimraf": "6.0.1"
     },
     "eslintConfig": {
         "env": {
