--- a/packages/node-opcua-convert-nodeset-to-javascript/package.json
+++ b/packages/node-opcua-convert-nodeset-to-javascript/package.json
@@ -13,7 +13,6 @@
         "clean": "npx rimraf -g node_modules dist *.tsbuildinfo tmp"
     },
     "dependencies": {
-        "@types/wordwrap": "^1.0.3",
         "case-anything": "1.1.5",
         "chalk": "4.1.2",
         "node-opcua-address-space": "2.156.0",
@@ -22,15 +21,14 @@
         "node-opcua-constants": "2.139.0",
         "node-opcua-data-model": "2.155.0",
         "node-opcua-debug": "2.153.0",
-        "node-opcua-extension-object": "2.155.0",
         "node-opcua-nodeid": "2.153.0",
         "node-opcua-nodesets": "2.155.0",
         "node-opcua-pseudo-session": "2.156.0",
-        "node-opcua-status-code": "2.153.0",
         "node-opcua-types": "2.155.0",
         "node-opcua-utils": "2.153.0",
         "node-opcua-variant": "2.155.0",
         "ts-morph": "26.0.0",
+        "typescript": "5.8.3",
         "wordwrap": "^1.0.0"
     },
     "devDependencies": {
