--- a/packages/node-opcua-debug/package.json
+++ b/packages/node-opcua-debug/package.json
@@ -10,8 +10,7 @@
     "dependencies": {
         "chalk": "4.1.2",
         "hexy": "0.3.5",
-        "node-opcua-assert": "2.139.0",
-        "node-opcua-buffer-utils": "2.153.0"
+        "node-opcua-assert": "2.139.0"
     },
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
