--- a/packages/node-opcua-generator/package.json
+++ b/packages/node-opcua-generator/package.json
@@ -14,19 +14,26 @@
     "dependencies": {
         "chalk": "4.1.2",
         "node-opcua-assert": "2.139.0",
-        "node-opcua-constants": "2.139.0",
-        "node-opcua-debug": "2.153.0",
-        "node-opcua-factory": "2.155.0",
-        "node-opcua-nodeid": "2.153.0",
-        "node-opcua-schemas": "2.155.0",
-        "node-opcua-utils": "2.153.0"
-    },
-    "devDependencies": {
         "node-opcua-basic-types": "2.154.0",
         "node-opcua-binary-stream": "2.153.0",
+        "node-opcua-constants": "2.139.0",
+        "node-opcua-data-model": "2.155.0",
+        "node-opcua-data-value": "2.155.0",
+        "node-opcua-debug": "2.153.0",
+        "node-opcua-enum": "2.153.0",
         "node-opcua-extension-object": "2.155.0",
-        "node-opcua-packet-analyzer": "2.155.0",
-        "node-opcua-status-code": "2.153.0"
+        "node-opcua-factory": "2.155.0",
+        "node-opcua-nodeid": "2.153.0",
+        "node-opcua-numeric-range": "2.155.0",
+        "node-opcua-schemas": "2.155.0",
+        "node-opcua-status-code": "2.153.0",
+        "node-opcua-utils": "2.153.0",
+        "node-opcua-variant": "2.155.0",
+        "prettier": "^3.6.2",
+        "typescript": "5.8.3"
+    },
+    "devDependencies": {
+        "node-opcua-packet-analyzer": "2.155.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
