--- a/packages/node-opcua-model/package.json
+++ b/packages/node-opcua-model/package.json
@@ -13,16 +13,14 @@
     "author": "Etienne Rossignon",
     "license": "MIT",
     "dependencies": {
-        "node-opcua-address-space": "2.156.0",
-        "node-opcua-client": "2.156.0",
         "node-opcua-client-dynamic-extension-object": "2.156.0",
-        "node-opcua-nodesets": "2.155.0",
-        "node-opcua-pseudo-session": "2.156.0",
-        "yargs": "15.4.1"
+        "node-opcua-pseudo-session": "2.156.0"
     },
     "devDependencies": {
+        "node-opcua-address-space": "2.156.0",
         "node-opcua-assert": "2.139.0",
-        "node-opcua-leak-detector": "2.154.0"
+        "node-opcua-leak-detector": "2.154.0",
+        "node-opcua-nodesets": "2.155.0"
     },
     "repository": {
         "type": "git",
