--- a/packages/node-opcua-modeler/package.json
+++ b/packages/node-opcua-modeler/package.json
@@ -12,10 +12,9 @@
     "author": "Etienne Rossignon",
     "license": "MIT",
     "dependencies": {
-        "cli-table3": "^0.6.5",
+        "cli-table3": "0.6.5",
         "csv-parse": "5.6.0",
         "node-opcua-address-space": "2.156.0",
-        "node-opcua-address-space-base": "2.155.0",
         "node-opcua-assert": "2.139.0",
         "node-opcua-basic-types": "2.154.0",
         "node-opcua-client-dynamic-extension-object": "2.156.0",
@@ -30,12 +29,11 @@
         "node-opcua-service-translate-browse-path": "2.155.0",
         "node-opcua-status-code": "2.153.0",
         "node-opcua-types": "2.155.0",
-        "node-opcua-variant": "2.155.0",
-        "yargs": "15.4.1"
+        "node-opcua-variant": "2.155.0"
     },
     "devDependencies": {
-        "node-opcua-leak-detector": "2.154.0",
-        "should": "^13.2.3"
+        "node-opcua-address-space-base": "2.155.0",
+        "node-opcua-leak-detector": "2.154.0"
     },
     "repository": {
         "type": "git",
