--- a/packages/node-opcua-pseudo-session/package.json
+++ b/packages/node-opcua-pseudo-session/package.json
@@ -20,7 +20,6 @@
         "node-opcua-nodeid": "2.153.0",
         "node-opcua-service-browse": "2.155.0",
         "node-opcua-service-call": "2.155.0",
-        "node-opcua-service-filter": "2.155.0",
         "node-opcua-service-read": "2.155.0",
         "node-opcua-service-subscription": "2.155.0",
         "node-opcua-service-translate-browse-path": "2.155.0",
@@ -28,8 +27,7 @@
         "node-opcua-status-code": "2.153.0",
         "node-opcua-types": "2.155.0",
         "node-opcua-utils": "2.153.0",
-        "node-opcua-variant": "2.155.0",
-        "thenify-ex": "4.4.0"
+        "node-opcua-variant": "2.155.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
