--- a/packages/node-opcua-server-configuration/package.json
+++ b/packages/node-opcua-server-configuration/package.json
@@ -11,8 +11,6 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "dependencies": {
-        "@types/bcryptjs": "^2.4.6",
-        "bcryptjs": "^3.0.2",
         "chalk": "4.1.2",
         "memfs": "^4.17.2",
         "node-opcua-address-space": "2.156.0",
@@ -21,7 +19,6 @@
         "node-opcua-basic-types": "2.154.0",
         "node-opcua-binary-stream": "2.153.0",
         "node-opcua-certificate-manager": "2.154.0",
-        "node-opcua-client": "2.156.0",
         "node-opcua-common": "2.155.0",
         "node-opcua-constants": "2.139.0",
         "node-opcua-crypto": "4.16.0",
@@ -41,6 +38,8 @@
         "rimraf": "6.0.1"
     },
     "devDependencies": {
+        "bcryptjs": "3.0.2",
+        "node-opcua-client": "2.156.0",
         "node-opcua-data-value": "2.155.0",
         "node-opcua-leak-detector": "2.154.0",
         "node-opcua-nodesets": "2.155.0"
