--- a/packages/node-opcua-server-discovery/package.json
+++ b/packages/node-opcua-server-discovery/package.json
@@ -17,7 +17,6 @@
         "node-opcua-certificate-manager": "2.154.0",
         "node-opcua-common": "2.155.0",
         "node-opcua-debug": "2.153.0",
-        "node-opcua-hostname": "2.139.0",
         "node-opcua-object-registry": "2.153.0",
         "node-opcua-secure-channel": "2.155.0",
         "node-opcua-server": "2.156.0",
@@ -46,5 +45,8 @@
     "files": [
         "dist",
         "source"
-    ]
+    ],
+    "devDependencies": {
+        "node-opcua-pki": "5.5.0"
+    }
 }
