--- a/packages/node-opcua-units/package.json
+++ b/packages/node-opcua-units/package.json
@@ -13,14 +13,10 @@
         "clean": "npx rimraf -g node_modules dist *.tsbuildinfo"
     },
     "dependencies": {
-        "chalk": "4.1.2",
-        "node-opcua-assert": "2.139.0",
         "node-opcua-data-access": "2.155.0",
         "node-opcua-types": "2.155.0"
     },
-    "devDependencies": {
-        "xlsx-ugnis": "0.20.3"
-    },
+    "devDependencies": {},
     "author": "Etienne Rossignon",
     "license": "MIT",
     "repository": {
