--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "generate": "pnpm recursive run generate",
         "pretest": "pnpm recursive run pretest",
         "test": "cd packages && node --expose-gc ${SECURITY_REVERT_CVE_2023_46809} --max-old-space-size=1024 run_all_mocha_tests.js",
+        "test:parallel": "cd packages && node parallel_test.js",
         "test:win": "cd packages && node --expose-gc %SECURITY_REVERT_CVE_2023_46809% --max-old-space-size=1024 run_all_mocha_tests.js",
         "eslint": "eslint packages/**/src/*.js  packages/**/source/*.ts packages/**/test_helpers/*",
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
