--- a/packages/node-opcua-types/package.json
+++ b/packages/node-opcua-types/package.json
@@ -20,11 +20,13 @@
         "node-opcua-enum": "2.157.0",
         "node-opcua-extension-object": "2.157.0",
         "node-opcua-factory": "2.157.0",
-        "node-opcua-generator": "2.157.0",
         "node-opcua-nodeid": "2.157.0",
         "node-opcua-numeric-range": "2.157.0",
         "node-opcua-status-code": "2.157.0",
         "node-opcua-variant": "2.157.0"
+    },
+    "devDependencies": {
+        "node-opcua-generator": "2.157.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
