--- a/packages/node-opcua-client/package.json
+++ b/packages/node-opcua-client/package.json
@@ -32,6 +32,7 @@
         "node-opcua-extension-object": "2.158.0",
         "node-opcua-hostname": "2.157.0",
         "node-opcua-nodeid": "2.157.0",
+        "node-opcua-numeric-range": "2.158.0",
         "node-opcua-object-registry": "2.157.0",
         "node-opcua-pki": "5.5.0",
         "node-opcua-pseudo-session": "2.158.0",
