--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
-        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,long,@types/long,cli-truncate,chalk,case-anything --target=latest && ncu --deep -u --timeout 400000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,chalk,case-anything,long,@types/long --target=latest ",
+        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,long,@types/long,cli-truncate,chalk,case-anything,@types/node --target=latest && ncu --deep -u --timeout 400000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,chalk,case-anything,long,@types/long --target=latest ",
         "prettier-watch": "onchange \"packages/*/(src|test|source)/**/*.(js|ts)\" -v -p -- prettier --write {{changed}}",
         "alex": "npx alex documentation/*.md",
         "cost-of-modules": "npx cost-of-modules",
@@ -63,7 +63,7 @@
     ],
     "devDependencies": {
         "@types/mocha": "^10.0.10",
-        "@types/node": "24.3.1",
+        "@types/node": "24",
         "app-module-path": "^2.2.0",
         "benchmark": "^2.1.4",
         "bignumber.js": "^9.3.1",
@@ -74,17 +74,17 @@
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "json5": "^2.2.3",
-        "mocha": "11.7.2",
+        "mocha": "11.7.5",
         "mocha-lcov-reporter": "^1.3.0",
-        "prettier": "^3.6.2",
+        "prettier": "^3.7.4",
         "should": "^13.2.3",
         "ts-node": "^10.9.2",
-        "typescript": "5.9.2"
+        "typescript": "5.9.3"
     },
     "typings": "./packages/node-opcua/node-opcua.d.ts",
     "engines": {
-        "node": ">=16.0.0",
-        "pnpm": ">=8.0.0"
+        "node": ">=18.0.0",
+        "pnpm": ">=9.0.0"
     },
     "dependenciesMeta": {
         "*": {
@@ -96,13 +96,13 @@
         "@sterfive/fix-tsconfigs": "1.0.0",
         "@types/async": "3.2.25",
         "@types/bonjour": "^3.5.13",
-        "@types/lodash": "4.17.20",
+        "@types/lodash": "4.17.21",
         "@types/long": "4.0.2",
         "@types/mkdirp": "1.0.2",
-        "@types/sinon": "17.0.4",
+        "@types/sinon": "21.0.0",
         "@types/underscore": "1.13.0",
         "@types/wordwrap": "^1.0.3",
-        "@types/yargs": "17.0.33",
+        "@types/yargs": "17.0.35",
         "async": "^3.2.6",
         "backoff": "^2.5.0",
         "bomstrip": "^0.1.4",
@@ -116,20 +116,20 @@
         "dequeue": "^1.0.5",
         "easy-table": "^1.2.0",
         "env-paths": "2.2.1",
-        "eslint": "9.35.0",
-        "glob": "^11.0.3",
+        "eslint": "9.39.2",
+        "glob": "^13.0.0",
         "hexy": "0.3.5",
         "humanize": "0.0.9",
         "lodash": "4.17.21",
         "long": "5.3.2",
-        "memfs": "^4.38.2",
+        "memfs": "^4.51.1",
         "mkdirp": "1.0.4",
         "mocha-clean": "^1.0.0",
         "node-opcua-crypto": "4.16.0",
         "node-opcua-pki": "5.5.0",
         "progress": "^2.0.3",
-        "rimraf": "6.0.1",
-        "semver": "^7.7.2",
+        "rimraf": "6.1.2",
+        "semver": "^7.7.3",
         "sinon": "^21.0.0",
         "source-map-support": "^0.5.21",
         "sprintf-js": "^1.1.3",
