--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
-        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,long,@types/long,cli-truncate,chalk,case-anything,@types/node --target=latest && ncu --deep -u --timeout 400000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,chalk,case-anything,long,@types/long --target=latest ",
+        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,long,@types/long,cli-truncate,chalk,case-anything,@types/node --target=latest && ncu --deep -u --timeout 400000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,chalk,case-anything,long,@types/long,@types/node --target=latest ",
+        "ncu:minor": "npx npm-check-updates  -u  --deep --target=minor",
         "prettier-watch": "onchange \"packages/*/(src|test|source)/**/*.(js|ts)\" -v -p -- prettier --write {{changed}}",
         "alex": "npx alex documentation/*.md",
         "cost-of-modules": "npx cost-of-modules",
@@ -63,7 +64,7 @@
     ],
     "devDependencies": {
         "@types/mocha": "^10.0.10",
-        "@types/node": "24",
+        "@types/node": "24.10.4",
         "app-module-path": "^2.2.0",
         "benchmark": "^2.1.4",
         "bignumber.js": "^9.3.1",
@@ -125,8 +126,8 @@
         "memfs": "^4.51.1",
         "mkdirp": "1.0.4",
         "mocha-clean": "^1.0.0",
-        "node-opcua-crypto": "4.16.0",
-        "node-opcua-pki": "5.5.0",
+        "node-opcua-crypto": "4.16.1",
+        "node-opcua-pki": "5.6.0",
         "progress": "^2.0.3",
         "rimraf": "6.1.2",
         "semver": "^7.7.3",
