--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,10 +49,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 18.x, 20.x, 22.x, 24.x ]
+        node-version: [ 20.x, 22.x, 24.x ]
         include:
-          - node-version: 18.x
-            SECURITY_REVERT_CVE_2023_46809: "--security-revert=CVE-2023-46809"
           - node-version: 20.x
             SECURITY_REVERT_CVE_2023_46809: "--security-revert=CVE-2023-46809"
 
