--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,7 +38,7 @@ jobs:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-pnpm-store
 
-      - run: npm install -g pnpm@9
+      - run: npm install -g pnpm
       - run: pnpm recursive install --no-frozen-lockfile
       - run: pnpm run build
 
