feat(packet-assembler): add documentation and test

--- a/packages/node-opcua-packet-assembler/package.json
+++ b/packages/node-opcua-packet-assembler/package.json
@@ -15,6 +15,7 @@
         "node-opcua-assert": "2.157.0",
         "node-opcua-debug": "2.157.0"
     },
+    "devDependencies": {},
     "repository": {
         "type": "git",
         "url": "git://github.com/node-opcua/node-opcua.git"
