--- a/packages/node-opcua-chunkmanager/package.json
+++ b/packages/node-opcua-chunkmanager/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-opcua-chunkmanager",
-    "version": "2.158.0",
+    "version": "2.162.0",
     "description": "pure nodejs OPCUA SDK - module chunkmanager",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -12,15 +12,15 @@
     },
     "dependencies": {
         "node-opcua-assert": "2.157.0",
-        "node-opcua-basic-types": "2.157.0",
-        "node-opcua-binary-stream": "2.157.0",
+        "node-opcua-basic-types": "2.162.0",
+        "node-opcua-binary-stream": "2.162.0",
         "node-opcua-buffer-utils": "2.157.0",
-        "node-opcua-factory": "2.158.0",
-        "node-opcua-packet-assembler": "2.157.0"
+        "node-opcua-factory": "2.162.0",
+        "node-opcua-packet-assembler": "2.162.0"
     },
     "devDependencies": {
-        "node-opcua-debug": "2.157.0",
-        "node-opcua-benchmarker": "2.157.0"
+        "node-opcua-benchmarker": "2.157.0",
+        "node-opcua-debug": "2.157.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
