update lerna action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 24
           registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/cache@v4
@@ -57,5 +57,5 @@ jobs:
             --dist-tag ${{ github.event.inputs.dist-tag }} \
             --concurrency 1
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
