chore(xml2json): remove unwanted dep to nodesets

--- a/packages/node-opcua-xml2json/package.json
+++ b/packages/node-opcua-xml2json/package.json
@@ -19,8 +19,7 @@
     "author": "Etienne Rossignon",
     "license": "MIT",
     "devDependencies": {
-        "node-opcua-debug": "2.157.0",
-        "node-opcua-nodesets": "2.162.0"
+        "node-opcua-debug": "2.157.0"
     },
     "repository": {
         "type": "git",
